[gd_scene load_steps=7 format=3 uid="uid://bk5y5osc7libt"]

[ext_resource type="Script" uid="uid://po4wjjg4qnk0" path="res://main.gd" id="1_272bh"]
[ext_resource type="PackedScene" uid="uid://cinvnsnbdela7" path="res://actors/player.tscn" id="1_cfvfw"]
[ext_resource type="Script" uid="uid://dmv5ty0jp0usw" path="res://Camera2D.gd" id="4_d2gre"]
[ext_resource type="Script" uid="uid://dne3na8bihmog" path="res://FPSctr.gd" id="5_ivfvg"]
[ext_resource type="Script" uid="uid://qgcjii7lqy0a" path="res://OutputHandler.gd" id="6_i0u21"]
[ext_resource type="PackedScene" uid="uid://b1h250kw14fra" path="res://UI/gui.tscn" id="10_5qbhp"]

[node name="Main" type="Node2D"]
script = ExtResource("1_272bh")

[node name="OpenFile" type="FileDialog" parent="."]
title = "Open File(s)"
position = Vector2i(0, 36)
size = Vector2i(750, 400)
ok_button_text = "Open"
file_mode = 1
access = 1

[node name="GAMES" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_cfvfw")]
position = Vector2(2736, 1241)

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true
script = ExtResource("4_d2gre")
new_zoom = 0.2

[node name="GUI" parent="." instance=ExtResource("10_5qbhp")]
visible = false

[node name="FPS" type="CanvasLayer" parent="."]

[node name="ctr" type="Label" parent="FPS"]
offset_right = 40.0
offset_bottom = 23.0
text = "FPS: 42"
script = ExtResource("5_ivfvg")

[node name="TimeOut" type="Timer" parent="."]
wait_time = 30.0

[node name="outputhandler" type="Node" parent="."]
script = ExtResource("6_i0u21")

[node name="WriteTimer" type="Timer" parent="outputhandler"]
wait_time = 5.0
autostart = true

[connection signal="canceled" from="OpenFile" to="." method="_on_open_file_canceled"]
[connection signal="confirmed" from="OpenFile" to="." method="_on_open_file_confirmed"]
[connection signal="files_selected" from="OpenFile" to="." method="_on_open_file_files_selected"]
[connection signal="timeout" from="TimeOut" to="." method="_on_time_out_timeout"]
[connection signal="timeout" from="outputhandler/WriteTimer" to="outputhandler" method="_on_write_timer_timeout"]
